# SpeedReader

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: content-rewriting-problem.md  new-site-request.md  other-issue.md
_cpp-archive/: Makefile
_cpp-archive/examples/: 2CdyGKStt9jwu5u.url.txt
benches/: lolhtml.rs
c-api/: Cargo.toml  build.rs  cbindgen.toml
c-api/include/: speedreader.h  speedreader.hpp  speedreader_ffi.hpp
c-api/src/: errors.rs  lib.rs  speedreader.cpp  speedreader.rs
c-api/test/: build.rs
c-api/test/src/: test.c  test.cc  test.cpp  test_cpp.cpp
data/: SpeedReaderConfig.json  content-stylesheet.css  default-manifest.json
examples/: classifier.rs  feature_extraction.rs  feature_extraction_streamer.rs  feature_extraction_streamer_output.rs  feature_extraction_token.rs  fetch-transform.rs  full_pipeline.rs  lolhtml.rs  whitelist.rs
examples/html/: frag1.html  frag2.html  frag3.html  simple.html
src/: classifier.rs  feature_extractor.rs  feature_extractor_tokenizer.rs  generate-dat.ts  lib.rs  predictor.rs  rewriter_config_builder.rs  serialize.js  speedreader.rs  speedreader_heuristics.rs  speedreader_streamer.rs  speedreader_streaming.rs  validate.ts  whitelist.rs
src/classifier/: feature_extractor.rs  mod.rs  predictor.rs
src/components/classifier/: predictor.cpp  predictor.h  (+1 more)
src/streaming/: mod.rs  rewriter_config_builder.rs  speedreader_streamer.rs  whitelist.rs
src/types/: SpeedReaderConfig.d.ts
tests/: legacy.rs  lib.rs  whitelist.rs
(+17 files in other folders)
