[package]
name = "speedreader"
version = "0.1.0"
authors = [
    "gpestana <gpestana@brave.com>",
    "Andrius Aucinas <aaucinas@brave.com>"
]
edition = "2018"

[workspace]
members = [
    "src/readability"
]

[dependencies]
html5ever = "0.23.0"
regex = "1"

# Pin versions compatible with rustc 1.35.0
url = "=1.7.2"
unicode-normalization = "=0.1.8"
smallvec = "=0.6.13"

readability = { path = "src/readability" }
lazy_static = "1.3"
markup5ever = "0.8"

[build-dependencies]
regex = "1"

[dev-dependencies]
matches = "0.1"
distance = "0.4.0"
termion = "1.5"
reqwest = { version = "0.10.1", features = ["blocking"] }
serde_json = "1.0.46"
adblock = "0.1.38"
